Dalitz_simplified/spearmint/delete_example1/output/00000018.out
Job launching after 0.26 seconds in submission.
Running python job.
Changed into dir /Users/weisser/Dropbox (MIT)/MIT/Research/MLTools/Dalitz_simplified/spearmint/delete_example1
Importing branin.py
Traceback (most recent call last):
  File "/Users/weisser/Documents/Spearmint-master/spearmint/launcher.py", line 243, in launch
    result = python_launcher(job)
  File "/Users/weisser/Documents/Spearmint-master/spearmint/launcher.py", line 325, in python_launcher
    module  = __import__(main_file)
  File "/Users/weisser/Dropbox (MIT)/MIT/Research/MLTools/Dalitz_simplified/spearmint/delete_example1/branin.py", line 21
    print classifier_eval_simplified.classifier_eval_callable(params["x"], params{"y"],2)
                                                                                 ^
SyntaxError: invalid syntax
Problem executing the function
Job failed in 0.00 seconds.
(<type 'exceptions.SyntaxError'>, SyntaxError('invalid syntax', ('/Users/weisser/Dropbox (MIT)/MIT/Research/MLTools/Dalitz_simplified/spearmint/delete_example1/branin.py', 21, 82, '    print classifier_eval_simplified.classifier_eval_callable(params["x"], params{"y"],2)\n')), <traceback object at 0x1081ac830>)
